1. Fix the height issue of Portfolio section on mobile devices.

--- a/src/index.scss
+++ b/src/index.scss
@@ -64,12 +64,10 @@ a {
   width: 300px;
 }
 
-/*
-.container img {
-  height: 100%;
-  width: 100%;
-  object-fit: cover;
-  -webkit-mask-image: url(#mask);
-  mask-image: url(#mask);
+
+@media screen and (max-width: 768px) {
+    #portfolio {
+      height: auto;
+      padding: 5em 0 0 0;
+    }
 }
-*/
